fix: glossary loading